--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -17,6 +17,13 @@ char 1byte
 int 4byte 
 float 4byte
 double 4byte
+int类型的商不为整数的话下去整，直接抹去小数点后面的数字
+比较浮点值的时候会加上精准度误差如
+if(fabs(x-y)<=eps) 相等
+else if (a<b-eps) a小于b
+else a大于b
+const double eps = 1e-6
+
 输入输出:
 #include <cstdio>
 scanf("%x",&a);
@@ -25,13 +32,22 @@ float: %f;
 double: %lf;
 char: %c;
 printf("%x",a);
+1、读入的个数未知时，可以用while(cin >> x)或while(scanf("%d", &x) != -1)或while(~scanf("%d", &x))来输入。
+2、如果输入的最后一个为0且该0不处理，输入语句可以用while(cin >> x && x)或while(cin >> x, x)，从左到右执行，返回值是最后一个
+3、while(true)
+cin >> x;
+4、while(n--)cin>>n;
+%%百分号转译
+scanf在读入字符时不会自动过滤空格、回车和tab（制表符）
+输入小于10万次，可以用cin cout
+C++1s可以进行10亿次操作
+
 最小数字宽度:
 a. %8.3f, 表示这个浮点数的最小宽度为8，保留3位小数，当宽度不足时在前面补空格。
 b. %-8.3f，表示最小宽度为8，保留3位小数，当宽度不足时在后面补上空格。
 c. %08.3f, 表示最小宽度为8，保留3位小数，当宽度不足时在前面补上0。
 
-读入的个数未知时，可以用while(cin >> x)或while(scanf("%d", &x) != -1)或while(~scanf("%d", &x))来输入。
-如果输入的最后一个为0且该0不处理，输入语句可以用while(cin >> x && x)或while(cin >> x, x)，逗号表达式取最后一个值。
+
 */
 ```
 
@@ -48,6 +64,25 @@ if语句下如果判断非零，则!=可以省略；
 ```c++
 /*
 while的条件判断可以用逗号隔开
+break是直接退出循环，continue是跳过本次循环后面的进入下一次循环
+循环嵌套，先行后列
+循环n次：
+1.for(int i =1;i<=n;i++)
+2.for(int i =0;i<n;i++)
+3.for(int i = n-1;i>=0;i--)
+*/
+```
+
+## 4.数组
+
+```c++
+/*
+int a[10000]={0}; 将数组全部初始化成0
+定义数组没有给出的值默认是0
+函数内定义的数组是随机值，函数外的数组一定都是0（int main（）函数），即局部变量随机，全局变量都是0（原因是内存上面是栈存放指令，下面是堆负责存放数据，堆是虚拟的，用一块开一块内存，最开始标记为全部指向零，但栈是开多少就是多少，里面的值不会清空
+C++默认的栈空间是一M，不够大定义很大会报错，函数外面的变量会放在堆空间里面，没有长度限制只有内存限制
+定义完一定要用一下
+数组下标一定从0开始
 */
 ```
 
@@ -58,18 +93,29 @@ while的条件判断可以用逗号隔开
 ```c++
 /*
 #include <cmath>
-sqrt,pow函数
+sqrt(x),pow(底数,指数),abs(x)（整数绝对值）fabs(x)小数绝对值函数
+
 #include <iostream>
 cin,cout函数
+
 #include <algorithm>
-max函数
-swap函数
+max(a,b)函数 swap(a,b)函数 reverse（翻转起始位置，翻转的终止位置的下一个位置）
+
 #include <iomanip>
 cout<<fixed<<setprecision(x) cout保留x位小数
 #include <cstring>
 string类型
 #include <cstdio>
 printf，scanf函数
+*/
+```
+
+## 重要的数学知识
+
+```c++
+/*
+曼哈顿距离
+d(i,j)=|xi-xj|+|yi-yj|
 */
 ```
 
