--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -23,6 +23,15 @@ if(fabs(x-y)<=eps) 相等
 else if (a<b-eps) a小于b
 else a大于b
 const double eps = 1e-6
+位数：Nlog(10)2   log(10)2≈3. 
+double有效位数16位，小数点后15位
+int有效数在正负20亿左右
+const类型为只读变量，不能修改
+1KB=1024byte
+1MB=1024KB
+1GB=1024MB
+B=byte b=bit
+1Mb 1s的下载速度是1Mb=1/8MB=128KB
 
 输入输出:
 #include <cstdio>
@@ -82,7 +91,50 @@ int a[10000]={0}; 将数组全部初始化成0
 函数内定义的数组是随机值，函数外的数组一定都是0（int main（）函数），即局部变量随机，全局变量都是0（原因是内存上面是栈存放指令，下面是堆负责存放数据，堆是虚拟的，用一块开一块内存，最开始标记为全部指向零，但栈是开多少就是多少，里面的值不会清空
 C++默认的栈空间是一M，不够大定义很大会报错，函数外面的变量会放在堆空间里面，没有长度限制只有内存限制
 定义完一定要用一下
+
 数组下标一定从0开始
+
+位数多的时候用数组来表示整数，数组里的每一位是数字里的每一位
+加减乘逆序存入数组，除法顺序存入数组
+高精度算法
+lgx 下取整为x的位数
+
+二维数组
+a[x][y]：a[0][0],a[0][1].....a[0][y];
+二维数组初始化样例：
+a[3][4]={{1,2,3,4},{2,3,4,2},{2,3,3,1}}
+初始化不连续的数组只能用循环
+二维数组的输入
+for(int i =0;i<n;i++)
+    for(int j = 0;j<m;j++)
+        cin >>a;
+二维数组的输出
+for(int i = 0;i<n;i++){
+    for(int j = 0;j<n;j++) cout<<a[i][j]<<' ';
+cout<<endl;
+}
+
+清空数组
+#include <cstring>
+memset(数组名字，初始化的值，初始化的长度)
+中间数不是把数组赋值，而是赋值byte，即8bit，如赋值2，一个字节就是0000 0010，常见赋值0(00000000)和-1，（11111111）
+所有单位都是字节byte 1byte=8bit，因此初始化全部的长度=数组内变量数量*类型字节数
+例：int a[10] memset(a,0,40)
+注：是每个字节变成0,
+memset(a,1,)
+一个byte有8个bit，每个int类型有4个byte，每个int有32bit，即8组XXXX，从0开始将40个byte全部变成1，相当于每个byte都为0000 0001。
+即0000 0001 0000 0001 0000 0001 0000 0001，所以10个变量，每个变量都是0001 0000 0001 0000 0001 0000 0001
+
+数组长度
+sizeof为运算符，相当于！而非函数，不需要括号，可以求某一个数组占用的字节数量
+
+数组复制
+memcopy(复制的目标数组，原数组，复制的长度（sizeof))
+
+
+
+
+
 */
 ```
 
@@ -105,6 +157,8 @@ max(a,b)函数 swap(a,b)函数 reverse（翻转起始位置，翻转的终止位
 cout<<fixed<<setprecision(x) cout保留x位小数
 #include <cstring>
 string类型
+memset
+memcopy
 #include <cstdio>
 printf，scanf函数
 */
@@ -116,6 +170,8 @@ printf，scanf函数
 /*
 曼哈顿距离
 d(i,j)=|xi-xj|+|yi-yj|
+切比雪夫距离
+d= max(|x1-x2|,|y1-y2|)
 */
 ```
 
