--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -6,3 +6,23 @@ password: ""
 ---
 
  
+
+# 数组
+
+## 平方矩阵
+
+[753. 平方矩阵 I - AcWing题库](https://www.acwing.com/problem/content/755/)
+
+## 蛇形矩阵
+
+[756. 蛇形矩阵 - AcWing题库](https://www.acwing.com/problem/content/758/)
+
+# 字符串
+
+## 字符串插入
+
+https://www.acwing.com/problem/content/775/
+
+## 去掉多余的空格
+
+https://www.acwing.com/problem/content/768/
