--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -40,6 +40,7 @@ int: %d;
 float: %f;
 double: %lf;
 char: %c;
+字符串： %s;
 printf("%x",a);
 1、读入的个数未知时，可以用while(cin >> x)或while(scanf("%d", &x) != -1)或while(~scanf("%d", &x))来输入。
 2、如果输入的最后一个为0且该0不处理，输入语句可以用while(cin >> x && x)或while(cin >> x, x)，从左到右执行，返回值是最后一个
@@ -138,6 +139,135 @@ memcopy(复制的目标数组，原数组，复制的长度（sizeof))
 */
 ```
 
+## 5.字符串
+
+```c++
+/*
+ASCII
+10 回车
+32 空格
+48 0
+65 A
+97 a
+
+字符串是字符数组加上结束符\0
+\0的ACSII码表NUL
+可以用字符串来初始化字符数组，此时每个字符串结尾会暗含一个\0，因此字符数组长度至少比字符串长度多1
+例：
+char a1[] = {'c','+','+'};
+char a2[] = {'c','+','+','\0'};
+char a3[] = "C++";
+
+字符串输出
+cout<<a2;从头开始输出
+cout<<a2+1;从第二个数开始输出
+puts();
+字符串输入
+char s[100]
+cin >> s;数组下标从0开始
+scanf("%s",s);
+cin >>s+1;数组下标从1开始
+数组名字=首元素地址
+读入字符串遇到空格 回车 结束才会停止
+
+读一整行包括空格
+fgets(字符串名字，最多读入数量，读入文件（一般为stdin）)
+string s;
+cin.getline(cin,s);
+getline(cin,s);
+
+输入量大字符串
+输入量小string
+
+字符串函数
+#include <cstring>
+strlen(s) string的长度，只计算字符串的元素，\0不计入其中
+strcmp(a,b) 比较两个字符串的大小，a<b，返回-1，a==b返回0，a>b返回1，这里的比较方式是字典序
+注：字典序一般和贪心相关，一旦确定哪个大后面可以不用比较
+strcpy(a,b) 将字符串b复制给从a开始的字符数组
+
+遍历输出字符数组中的字符
+for(int i =0;i<strlen(s);i++) cout<<s[i]<<endl;   双重循环，效率低
+for(int i =0,len =strlen(s);i<len;i++)
+cout<<s[i]<<endl;
+for(int i = 0;str[i];i++)
+cout<<str[i]<<endl;
+*/
+```
+
+```c++
+/*
+#include <string>
+(可以动态地把两个字符串拼在一块，字符数组不可以)
+string的初始化：
+string s1; 默认的空字符串
+string s2 =s1; s2是s1的副本
+string s3 = "hiya"; s3是该字符串字面值的一个副本
+string s4(10,'c') s4的内容是cccccccccc
+
+输入输出一个string：
+cin >> s1>>s2;
+cout<<s1<<' '<<s2
+puts()
+不能用scanf读入一个string
+但是可以用printf输出string
+printf("%s\n",s1.c_str()) .c_str()会返回字符数组的首地址
+读入空格
+cin.getline(s1,10000)
+getline(cin,s1)
+
+s1.size() 返回字符串的长度 速度是O(1)
+
+s1.empty() 判断字符串是不是空的
+
+判断大小s1>s2 s1==s2 s1<s2 s1!=s2;
+
+string s3 = s2+s1;支持两个string相加
+s3+=s1;string+="abc";支持累加
+在string做加法运算的时候，字面值和字符都会被转化成string对象，因此直接相加就是将这些字面值串联起来。
+当把string对象和字符字面值及字符串字面值混在一条语句中使用时，必须确保每个加法运算符的两侧的运算对象至少有一个是string，否则会报错，且必须是等号左边，因为运算是从左到右进行的
+
+处理string对象中的字符
+遍历string
+可以将string对象当成字符数组来处理
+例：
+#include <iostream>
+for(int i =0;i<s.size();i++); cout<<c <<endl;
+for(char c : s)cout<< c<<endl;
+for(类型 变量 ：字符串名字) cout<<c<<endl；
+相当于
+for(int i = 0;i<s.size();i++); char c =str[i];
+
+改变某个值
+for(char &c : s)
+for(auto &c : s)
+
+back() 返回最后一个字符
+pop_back() 删除最后一个字符
+
+#include <sstream>
+stringstream ssin(s); // 把他当成cin只不过是从s这个字符串里面获取
+
+substr(i, len) 截取字符串 包左不包右
+
+substr(i)从当前位置截取到最后
+
+string str求取长度,len=str.length()
+char str[N]求取长度，len =strlen(str)
+
+大小写字符差值为32，字符数字与数字之间差个‘0’即48
+
+substr(string,start,length)
+a.substr(start,length)
+从string的start位置开始提取字符串，length为待提取的字符串长度，若length不指定，为空，为负值或者大于字符串长度的时候，返回整个字符串的所有字符。
+
+
+
+
+
+*/
+```
+
 
 
 ## 重要的头文件
@@ -155,12 +285,24 @@ max(a,b)函数 swap(a,b)函数 reverse（翻转起始位置，翻转的终止位
 
 #include <iomanip>
 cout<<fixed<<setprecision(x) cout保留x位小数
+
 #include <cstring>
 string类型
 memset
 memcopy
+strlen
+strcpy
+strcmp
+
 #include <cstdio>
 printf，scanf函数
+puts函数
+
+#include <cctype>
+islower isupper 判断一个字符是否为大写字母或者小写字母，不是返回0；是返回1；
+tolower 和toupper用于转换字符的大小写
+char a=tolower(a);
+char b=toupper(b);
 */
 ```
 
