--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -21,8 +21,46 @@ password: ""
 
 ## 字符串插入
 
-https://www.acwing.com/problem/content/775/
+[773. 字符串插入 - AcWing题库](https://www.acwing.com/problem/content/775/)
 
 ## 去掉多余的空格
 
-https://www.acwing.com/problem/content/768/
+[766. 去掉多余的空格 - AcWing题库](https://www.acwing.com/problem/content/768/)
+
+## 单词替换
+
+[770. 单词替换 - AcWing题库](https://www.acwing.com/problem/content/772/)
+
+## 输出字符串
+
+[764. 输出字符串 - AcWing题库](https://www.acwing.com/problem/content/description/766/)
+
+## 最长单词
+
+[774. 最长单词 - AcWing题库](https://www.acwing.com/problem/content/776/)
+
+## 字符串中最长的连续出现的字符
+
+[771. 字符串中最长的连续出现的字符 - AcWing题库](https://www.acwing.com/problem/content/773/)
+
+## 字符串位移包含问题
+
+[776. 字符串移位包含问题 - AcWing题库](https://www.acwing.com/problem/content/778/)
+
+## 倒排单词
+
+[775. 倒排单词 - AcWing题库](https://www.acwing.com/problem/content/777/)
+
+# 函数
+
+## 跳台阶
+
+[821. 跳台阶 - AcWing题库](https://www.acwing.com/problem/content/823/)
+
+## 走方格
+
+[822. 走方格 - AcWing题库](https://www.acwing.com/problem/content/824/)
+
+## 排序
+
+https://www.acwing.com/problem/content/825/
