--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -2,6 +2,7 @@
 title: 备战408（1）
 date: 2024-03-11 01:13:16
 tags: 408日常	
+sticky: 100
 ---
 
 #   语法基础课
@@ -348,7 +349,7 @@ yxc
 */
 ```
 
-## 函数
+## 6.函数
 
 * 一个典型的函数定义包括：返回类型、函数名字、由0或多个形参组成的列表以及函数体
 * 注：每一个变量都要声明类型
@@ -462,6 +463,8 @@ int fact(int a){
 ```
 
 递归一定要有结束条件不然容易死循环
+
+## 7.类、结构体、指针和引用
 
 ## 重要的头文件
 
