--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -4,6 +4,8 @@ date: 2024-03-11 01:13:16
 tags: 408日常	
 sticky: 100
 categories: 算法
+banner_img: /img/1920x1080 (1).jpg
+index_img: /img/1920x1080 (1).jpg
 ---
 
 #   语法基础课
@@ -241,6 +243,19 @@ for(char c : s)cout<< c<<endl;
 for(类型 变量 ：字符串名字) cout<<c<<endl；
 相当于
 for(int i = 0;i<s.size();i++); char c =str[i];
+去掉空格
+ string res;
+        for(auto c : str)
+            {
+                if(c==' ') res+="%20";
+                else res+=c;
+            }
+            return res;
+
+
+
+
+
 
 改变某个值
 for(char &c : s)
@@ -467,6 +482,306 @@ int fact(int a){
 递归一定要有结束条件不然容易死循环
 
 ## 7.类、结构体、指针和引用
+
+### 类
+
+```c++
+#include <iostream>
+using namespace std;
+class person{
+  private://只能在类里面调用
+  int age,height;
+    double money;
+    string books[1000];
+    
+  public://可以在类内外调用
+    string name;
+    void say(){
+        cout<<"I am"<<name <<endl;
+        
+    }
+    int get_age(){
+            return age;
+        }
+    void add_money(double x)
+        money +=x;
+};//一定要加分号
+int main(){
+    person c;
+    c.name = "kugeln";
+    c.add_money(10000); 
+}
+```
+
+类里面未定义的变量默认private，结构里面未定义的变量默认public
+
+短简单结构，复杂长类
+
+### 结构体
+
+```c++
+#include <iostream>
+using namespace std;
+struct person{
+ int age,height;
+ double money;
+    person(){}
+ person(int _age,int _height,double  _money)//构造函数，不需要写类型；
+ {
+   age = _age;
+     height = _height;
+     money = _money;
+ }
+    person(int _age,int _height,double _money) : age(_age),height(_height),money(_money){}
+};
+int main(){
+    person p(18,180,100);
+    return 0;
+}
+```
+
+### 指针
+
+#### 引用
+
+指针指向存放变量的值的地址
+
+```c++
+#include <iostream>
+using namespace std;
+char a,b;
+int main(){
+   int a =10;
+   int* p =&a;//int类型的指针，p取a的地址，指针名是p，p本身存的值就是a的地址，*p表示取到a的值。
+   return 0;
+}
+
+
+```
+
+数组名是一种特殊的指针。指针可以做运算。数组的地址是开头的地址，连续排布
+
+#### 指针运算
+
+```c++
+#include <iostream>
+
+using namespace std;
+
+int main()
+{
+    int a[5] = {1, 2, 3, 4, 5};
+
+    for (int i = 0; i < 5; i ++ )
+        cout << *(a + i) << endl;
+//不是数值相加，而是跳到另外一个变量
+     // 指针加减只能同类型
+    int* p = &a;
+    int& p = a;//引用、别名
+    
+    
+    
+    return 0;
+  
+}
+```
+
+### 链表
+
+```c++
+#include <iostream>
+using namespace std;
+
+struct Node{
+    int val;
+    Node* next;//只能定义指针不能定义变量
+    Node (int _val) :val(_val),next(NULL){}
+}
+int main(){
+      Node node = Node(1);//定义了一个node类型的变量
+      Node* p = new Node(1);//new返回的是地址，不加new返回的是值
+    p->next = p;//定义一个指针指向自己
+    p.next = p;//指针调用
+    p->next = p;//变量调用
+    
+    
+    auto p =new Node(1);
+    auto q =new Node(2);
+    auto o =new Node(3);
+    p->next = q;
+    q->next = o;//链表，第一个点即头结点，头结点地址head而非值
+}
+```
+
+#### 如何遍历链表
+
+单链表
+
+```c++
+#include <iostream>
+using namespace std;
+
+struct Node{
+    int val;
+    Node* next;
+    Node (int _val) :val(_val),next(NULL){}
+}
+int main(){
+    auto p =new Node(1);
+    auto q =new Node(2);
+    auto o =new Node(3);
+    p->next = q;
+    q->next = o;
+    Node* head = p;
+     
+    for(Node* i = head;i;i = i->next)
+        cout<<i->value<<endl;//链表的遍历方式
+}
+```
+
+#### 链表操作
+
+```c++
+#include <iostream>
+using namespace std;
+
+struct Node{
+    int val;
+    Node* next;
+    Node (int _val) :val(_val),next(NULL){}
+}
+int main(){
+    auto p =new Node(1);
+    auto q =new Node(2);
+    auto o =new Node(3);
+    p->next = q;
+    q->next = o;
+    Node* head = p;
+    
+    Node* u = new Node(4);
+    u->next = head;
+    head = u;//头插法，插入值的下一个指向原头结点，头结点变为插入值
+    
+    Node* u = new Node(4);
+    Node* tail = new Node(-1);//虚拟节点
+    tail->next = u;
+    tail = tail->next;
+    //尾插法
+    //链表的删除是指遍历的时候跳过该节点
+    head->next=head->next->next;//head指向2，跳过1，相当于删除
+    for(Node* i = head;i;i = i->next)
+        cout<<i->value<<endl;//链表的遍历方式
+}
+```
+
+##### 头插法图示
+
+![](/img/20200219110504138.png)
+
+![](/img/20200219110626521.png)
+
+```c++
+#include <iostream>
+using namespace std;
+struct node{
+     int val;
+     node* next;
+     node (int _val):val(_val),next(NULL){}
+}*head;
+int main(){
+    auto a = new node(1);
+    auto b = new node(2);
+    head = a;//插入头结点
+    for(node* i = head;i;i=i->next)
+      cout<<i->val<<' '; //遍历目前链表
+    cout<<endl;
+    b->next = head;//保存头结点指向的节点，防止节点丢失
+    head = b;//将要插入的点变为头节点，即插入节点
+    for(node* i = head;i;i=i->next)
+      cout<<i->val<<' ';
+      system("pause");
+    return 0;
+}
+```
+
+
+
+##### 尾插法图示
+
+![](/img/20200219111307832.png)
+
+![](/img/20200219111222267.png)
+
+![](/img/20200219111351270.png)
+
+![](/img/20200219111407756.png)
+
+```c++
+#include <iostream>
+using namespace std;
+struct node{
+     int val;
+     node* next;
+     node (int _val):val(_val),next(NULL){}
+}*head;
+int main(){
+   auto a = new node(1);
+   auto b = new node(2);
+   node* tail;
+   head = a;//a为链表原始数据，头结点
+   tail= a;//链表中只有a，因此既是头结点也是尾结点
+   b->next = NULL; //链表最后一个数指向空，为插入做准备
+   a->next = b;//a指向b，将b插入a后面
+  for(node* i = head;i;i=i->next)
+    cout<<i->val<<' ';//遍历输出链表
+  system("pause");
+return 0;
+
+}
+```
+
+
+
+#### 链表排序合并
+
+```C++
+class Solution {
+public:
+    ListNode* merge(ListNode* l1, ListNode* l2) {
+        auto dummy = new ListNode(-1), tail = dummy;
+        //新建一个链表；
+        while (l1 && l2)//判断两个是否为空
+            if (l1->val < l2->val)//如果l1指向的值小于l2指向的值
+            {
+                tail = tail->next = l1;
+                //
+                l1 = l1->next;
+            }
+            else
+            {
+                tail = tail->next = l2;
+                l2 = l2->next;
+            }
+
+        if (l1) tail->next = l1;
+        if (l2) tail->next = l2;
+
+        return dummy->next;
+    }
+};
+
+
+```
+
+
+
+
+
+
+
+
+
+
 
 ## 重要的头文件
 
