--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -65,3 +65,13 @@ categories: 算法
 ## 排序
 
 https://www.acwing.com/problem/content/825/
+
+# 结构体、类、指针、引用
+
+## 字符串转换为整数
+
+[87. 把字符串转换成整数 - AcWing题库](https://www.acwing.com/problem/content/83/)
+
+## 删除链表节点
+
+[28. 在O(1)时间删除链表结点 - AcWing题库](https://www.acwing.com/problem/content/85/)
