--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -546,6 +546,8 @@ int main(){
 
 指针指向存放变量的值的地址
 
+nullptr，是c++中空指针类型的关键字，是在C++11中引入的。用来表示空指针类型。
+
 ```c++
 #include <iostream>
 using namespace std;
@@ -587,6 +589,8 @@ int main()
 ```
 
 ### 链表
+
+在链表中，如果头结点可能被删掉，则需要一个虚拟头结点，最后返回虚拟节点->next
 
 ```c++
 #include <iostream>
@@ -740,6 +744,62 @@ return 0;
 }
 ```
 
+#### 链表反转
+
+![](/img/RGIF2.gif)
+
+```c++
+ ListNode* reverseList(ListNode* head) {
+        // 记录前驱结点
+        ListNode* pre = nullptr;
+        auto cur = head;
+        while(cur)
+        {
+            auto next = cur->next;
+            cur->next = pre;
+            pre = cur;
+            cur = next;
+        }  
+        return pre;
+    }
+```
+
+#### 两个链表的第一个公共结点
+
+题解
+1. 用两个指针 p1，p2 分别指向两个链表 headA，headB 的头结点，同时向后遍历。
+2. 当指针到达链表末尾时，重新定位到另一个链表的头结点。
+3. 当它们相遇时，所指向的结点就是第一个公共结点。
+
+解释
+设A链表的非公共部分长度为LA，B链表的非公共部分长度为LB，公共部分长度为C。
+
+A链表总长度为LA + C，B链表总长度为LB + C。
+当指针按照题解方式走下去，p1第二次走到公共节点的时候，走过的长度为LA + C + LB，p2第二次走到公共节点的时候，走过的长度为LB + C + LA。p1 p2走过的长度相等，p1 p2 相遇。
+所以，当p1 p2 相遇（相等）的时候，指向的节点就是公共节点。
+
+```c++
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) {
+        ListNode *p1 = headA;
+        ListNode *p2 = headB;
+
+        while (p1 != p2) {
+            if(p1 != NULL)//p1没有走到结尾
+                p1 = p1->next;//p1指向下一个节点
+            else//p1走到结尾
+                p1 = headB;//p1指向另一个链表头
+            if(p2 != NULL)//p2没有走到结尾
+                p2 = p2->next;//p2指向下一个节点
+            else  //p2走到结尾 
+                p2 = headA;//p2指向另一个链表头
+        }
+        return p1;
+    }
+};
+```
+
 
 
 #### 链表排序合并
@@ -773,13 +833,438 @@ public:
 
 ```
 
+## 8.STL
+
+### vector
+
+```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+int main(){
+    vector<int> a;
+    vector<int> b[123];
+    struct Rec
+    {
+        int x,y;
+        
+    };
+    vector<Rec> c;
+}
+```
+
+### 函数
+
+```c++
+a.size();//输出大小
+a.empty();//判断是否为空，返回布尔值
+//所有容器都有
+
+a.clear();//删掉容器里的所有元素，时间复杂度O（n），其余大部分是O(1)，队列、优先队列和栈没有
+a.begin();//第一个迭代器的地址
+*a.begin();//相当于a[0]
+a.end();//最后一个位置的下一个位置，即便捷，越界访问
+//迭代器左闭右开，包含begin不包含end
+a.front();//相当于a[0],*a.begin();
+a.back();//相当于a[a.size()-1]
+a.push_back(4);//往a的最后面加一个元素
+a.pop_back();//删除a的最后一个元素
+```
+
+### 迭代器
+
+```c++
+vector<int>::iterator it = a.begin();
+it +2;//相当于访问a[2]
+it：//相当于访问a[0]
+*it //取得迭代器的值
 
 
+```
+
+#### 遍历迭代器
+
+```c++
+//遍历vector
+
+#include <iostream>
+#include <vector>
+using namespace std;
+int main(){
+    vector<int<> a({1,2,3});
+    cout<<a[0]<<' '<<a*.begin()<<endl;
+    for(int i = 0;i<a.size();i++)
+        cout<<a[i]<<endl;//第一种方式
+    for(vector<int>::iterator i = a.begin();i !=a.end();i++) 
+        cout<<*i<<' '; //第二种方式
+     for(auto i = a.begin();i !=a.end();i++) 
+        cout<<*i<<' ';//第三种方式
+    for(int  x : a) cout<<x<<' ';
+    //第四种方式
+    
+}
+```
+
+### 队列
+
+主要包括循环队列queue和优先队列priority_queue两个容器
+
+队列特性先进先出
+
+优先队列优先弹出所有数的最大值
+
+```c++
+#include <iostream>
+#include <queue>
+using namespace std;
+int main(){
+    //队列的声明
+   queue<int> q;
+   queue<double> a;
+   struct Rec{
+       int a,x,y;
+   };
+    queue<Rec> b;
+    
+    //优先队列的定义
+    priority_queue<int>q;//大根堆
+  priority_queue<int,vector<int>,greater<int>> b;//小根堆，即优先弹出最小值
+    
+    struct Rec{
+        int a,b;
+        bool operator<(const Rec& t) const {
+            return a<t.a;
+        }
+    };
+    priority_queue<Rec> d;
+    //结构体优先队列的定义,大根堆
+     struct Rec{
+        int a,b;
+        bool operator>(const Rec& t) const {
+            return a>t.a;
+        }
+    };
+    priority_queue<Rec,vector<Rec>,greater<Rec>> d;//结构体优先队列的定义，小根堆
+
+  // 循环队列queue
+        a.push(1);// 从队尾插入     
+        a.pop();// 从队头弹出
+        a.front();// 返回队头元素
+        a.back();// 返回队尾元素
+ //   优先队列priority_queue
+    	a.push(1);//把元素插入堆
+        a.pop();//删除堆顶元素即最大值
+    	a.top();//查询堆顶元素（最大值）*/
+    
+    //清空队列，即冲重新初始化
+    q = queue<int> ();
+}
+```
+
+### 栈
+
+先进后出
+
+```c++
+#include <iostream>
+#include <stack>
+using namespace std;
+int main(){
+    stack<int> stk;
+    stk.push(1);//插入一个元素
+    stk.top();//返回栈顶元素
+    stk.pop();//弹出栈顶元素
+}
+```
+
+###  双端队列
+
+既可以队头队尾插入也可以队头队尾弹出，在头部增删元素仅需要O(1)的时间，支持向数组一样随机访问
+
+```c++
+#include <iostream>
+#include <deque>
+using namespace std;
+int main(){
+   deque<int> a;//定义一个双端队列
+   a.begin(),a.end();//返回头尾迭代器
+   a.front(),a.back();//返回头尾元素
+    a.push_back(1),a.push_front(2);
+    //在队尾插入1，在队头插入2
+    a[0];//随机访问一个元素
+    a.pop_back();//弹出最后一个元素
+    a.pop_front();//弹出第一个元素
+    a.clear();//清空一个队列
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+     return 0;
+}
+```
+
+### set
+
+```c++
+#include <iostream>
+#include <map>
+using namespace std;
+int main(){
+  set<int> a;//元素不能重复，重复元素会被忽略
+    multiset<int> b;//元素可以重复
+    
+    set<int>::iterator it = a.begin();
+    it ++;it --;
+    ++it;--it;
+    a.end();//a的最大元素的下一个位置的迭代器，前闭后开
+    --a.end();//指向集合中最大元素的迭代器
+    a.begin();//a的最小元素的迭代器
+    //时间复杂度为O(1)
+    
+    a.insert(x);//插入一个元素，时间复杂度为O（logn）
+    a.find(x);//查找一个元素，返回一个迭代器，如果没找到，返回值相当于a.end()，时间复杂度为O（logn）
+    if(a.find()==a.end()) //判断x是否在a里存在
+    struct rec{
+        int x,y;
+        bool operator< (const rec&t)const{
+            return x<t.x;
+        }
+    };
+    set<rec> c;//定义结构体set
+    a.size();//大小
+    a.empty();//是否为空
+    a.clear();//清空
+    
+    a.lower_bound(x);//查找大于等于x的元素中最小的一个，并返回指向该元素的迭代器
+        a.upper_bound(x);//查找大于x的元素中最小的一个，并返回指向该元素的迭代器
+    //二者的时间复杂度都为O（logn）
+    
+    a.erase(it);//删除迭代器it指向的元素，时间复杂度O(logn)
+    a.erase(x);//删除所有等于x的元素，时间复杂度为O(k+logn),k是被删除的元素个数
+    a.erase(pos,n); //删除从pos开始的n个字符，比如erase(0,1)就是删除第一个字符
+    a.erase(position);//删除position处的一个字符(position是个string类型的迭代器)
+    a.erase(first,last);//删除从first到last之间的字符（first和last都是迭代器）    
+
+    
+    
+    
+    a.count(x);//a里面x元素的个数
+}
+```
+
+### map
+
+map容器是一个键值对key-value的映射，其内部实现是一棵以key为关键码的红黑树。Map的key和value可以是任意类型，其中key必须定义小于号运算符。
+
+map<key_type, value_type> name;
+
+```c++
+#include <iostream>
+#include <map>
+using namespace std;
+int main(){
+ map<int,int>a;//存的是一个二元组，定义一个map,把第一个元素映射到第二个元素里
+    a[1] =2;
+    a[10000]=3;
+    cout<<a[1]<<endl;
+    
+    map<string,int> a;
+    a["kugeln"]=2;
+    cout<<a["kugeln"]<<endl;
+    
+    map<string,vector<int>>a;
+    a["kugeln"]=vector<int>();
+    cout<<a["kugeln"].size()<<endl;
+    
+     map<string,vector<int>>a;
+    a["kugeln"]=vector<int>({1,2,3,4});、
+    cout<<a["kugeln"][2]<<endl;
+    
+    // size/empty/clear/begin/end均与set类似。
+   a.insert({"a",{}});//第一个元素对应第一个类型，第二个元素对应第二个类型
+    a.find(x);//在a里面查找key为x的迭代器
+    
+    #include <unordered_set>
+    unordered_set<int>a;//哈希表，不能存储重复元素
+    #include <unordered_multiset>
+    unordered_multiset<int>b;//哈希表，能存储重复元素
+    #include <unordered_map>
+    unordered_map<int,int>c;
+}
+```
+
+### bitset
+
+```c++
+#include <bitset>
+bitset<1000>a,b;//初始化全0
+a[0]=1;
+a.set(3);//把a[3]赋值为1
+a.reset(3);//把a[3]赋值为0
+//无clear函数
+```
+
+### pair
+
+```c++
+pair<int,string> a;//定义
+a={3,"kugeln"};//赋值
+cout<<a.first<<' '<<a.second<<endl;
+//pair支持比较运算，先比较第一个关键字，再比较第二个关键字
+```
+
+## 9.位运算
+
+| 符号 | 运算 |
+| ---- | :--: |
+| &    |  与  |
+| \|   |  或  |
+| ~    |  非  |
+| ^    | 异或 |
+| >>   | 右移 |
+| <<   | 左移 |
+
+异或可以看成不进位加法
+
+a>>k 相当于a/2^k
+
+a<<k 相当于a*2^k
+
+```c++
+/*常用操作：
+求x的第k位数字，从个位数开始看 （二进制表示）
+x >> k & 1
+lowbit(x) = x & -x，返回x的最后一位1
+110110返回10，11000返回1000
+-a=~a+1
+
+*/
+```
+
+## 10.常用库函数
+
+```c++
+//reverse 翻转:
+#include <algorithm>
+vector<int> a({1,2,3,4,5});
+reverse(a.begin(),a.end());//翻转一个vector
+for(int x : a)cout<<x<<' ';
+cout<<endl;
+
+int a[]={1,2,3,4,5};
+reverse(a,a+5);//左闭右开翻转数组
+```
+
+```c++
+//unique 去重
+//返回去重（只去掉相邻的相同元素）之后的尾迭代器（或指针），仍然为前闭后开，即这个迭代器是去重之后末尾元素的下一个位置。该函数常用于离散化，利用迭代器（或指针）的减法，可计算出去重后的元素个数。
+#include <algorithm>
+int a[]={1,1,2,2,3,3,4};
+int m = unique(a,a+7)-a;
+cout<<m<<endl;
+for(int i = 0;i<m;i++)cout<<a[i]<<' ';
+
+//把一个vector去重：
+vector<int> a({1,1,2,2,3,3,4});
+int m = unique(a.begin(), a.end()) – a.begin();
+
+//把一个数组去重，元素存放在下标1 ~ n：
+int m = unique(a + 1, a + n + 1) – (a + 1);
 
 
+a.erase(unique(a.begin(),a.end()),a.end());//把数组后面除了不同元素之外的元素都删除
+```
+
+```c++
+//random_shuffle函数
+vector<int> a({1,1,2,2,3,3,4});
+random_shuffle(a.begin(),a.end());
+for(int x :a)cout<<x<<' ';
 
 
+#include <algorithm>
+#include <ctime>
+vector<int> a({1,1,2,2,3,3,4});
+srand(time(0));
+random_shuffle(a.begin(),a.end());
+for(int x :a)cout<<x<<' ';
 
+```
+
+```c++
+//sort函数
+sort(a.begin(),a.end());//从小到大排序
+sort(a.begin(),a.end(),greater<int>());//从大到小排序
+//自定义排序：
+bool cmp(int a,int b)//a是否应该排在b的前面
+{
+    return a<b;
+}
+sort(a.begin(),a.end(),cmp);
+//结构体排序
+bool cmp(rec a,rec b)//a是否应该排在b的前面
+{
+    return a.x<b.x;
+}
+struct rec{
+    int x;
+    int y;
+    
+}a[5];
+for(int i = 0;i<5;i++){
+    a[i].x=-i;
+    a[i].y=i;
+}
+sort (a,a+5,cmp);//从小到大排列
+//另一种方法，结构体重载
+struct rec{
+    int x;
+    int y;
+    bool operator<(const rec&t)const{
+        return x<t.x;
+    }a[5];
+}a[5];
+for(int i = 0;i<5;i++){
+    a[i].x=-i;
+    a[i].y=i;
+}
+sort (a,a+5);//从小到大排列
+```
+
+```c++
+//lower_bound/upper_bound二分
+//lower_bound的第三个参数传入一个元素x，在两个迭代器（指针）指定的部分上执行二分查找，返回指向第一个大于等于x的元素的位置的迭代器（指针）。
+//upper_bound的用法和lower_bound大致相同，唯一的区别是查找第一个大于x的元素。当然，两个迭代器（指针）指定的部分应该是提前排好序的。
+lower_bound(a.begin(),a.end(),x);
+
+//在有序int数组（元素存放在下标1 ~ n）中查找大于等于x的最小整数的下标：
+int i = lower_bound(a + 1, a + 1 + n, x) - a;
+vector<int> a{1,2,3,4,5,6};
+int t = upper_bound(a.begin(),a.end(),6)-a.begin();
+//在有序vector<int>中查找小于等于x的最大整数（假设一定存在）：
+int y = *--upper_bound(a.begin(), a.end(), x);
+```
+
+```c++
+//next_premutation
+//每运行一次就可以把数组排成下一个字典排数列；与之对应的是prev_permutation，即排出上一个字典序
+#include <algorithm>
+next_permutation(起始位置，末尾位置+1);
+next_permutation(a，a+n);//n输出数量
+next_permutation(a.begin(),a.end());
+next_permutation(起始位置，末尾位置，自定义排序)
+do{
+    
+}while(next_permutation(a.begin(),a.end()))
+```
 
 
 
