--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -75,3 +75,15 @@ https://www.acwing.com/problem/content/825/
 ## 删除链表节点
 
 [28. 在O(1)时间删除链表结点 - AcWing题库](https://www.acwing.com/problem/content/85/)
+
+## 合并两个排序的链表
+
+[36. 合并两个排序的链表 - AcWing题库](https://www.acwing.com/problem/content/34/)
+
+## 反转链表
+
+[35. 反转链表 - AcWing题库](https://www.acwing.com/problem/content/33/)
+
+## 删除列表中的重复节点
+
+[29. 删除链表中重复的节点 - AcWing题库](https://www.acwing.com/problem/content/27/)
