--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -8,9 +8,18 @@ banner_img: /img/1920x1080.jpg
 index_img: /img/1920x1080.jpg
 ---
 
-# 排序
+```cpp
+ios::sync_with_stdio(0);
+cin.tie(0);
+//加速cin,cout;
+//副作用不能使用scanf,printf
+```
 
-## 快速排序——分治 O(nlogn)-O(n²)
+# 基础算法
+
+## 排序
+
+### 快速排序——分治 O(nlogn)-O(n²)
 
 * 确定分界点：q[l],q[(l+r)/2],q[r];随机
 * 调整区间：第一个区间所有的数都小于等于x，第二个区间所有的数都大于等于x
@@ -44,7 +53,7 @@ int i = l - 1, j = r + 1, x = q[l + r >> 1];
 
 ```
 
-## 归并排序——分治 O(nlogn)
+### 归并排序——分治 O(nlogn)
 
 * 确定分界点：mid=(l+r)/2
 * 递归排序left,right
@@ -72,11 +81,11 @@ void merge_sort(int q[], int l, int r)
 }
 ```
 
-# 二分
+## 二分
 
 二分不用考虑有没有解
 
-## 整数二分
+### 整数二分
 
 * 有单调性的题目可以二分，但可以二分不一定有单调性，二分的本质不是单调性
 * 二分的本质是性质，使得一部分满足红色性质，一部分满足绿色性质，整个区间可以一分为二，二分可以寻找性质的边界
@@ -108,7 +117,7 @@ int bsearch_1(int l, int r)
     while (l < r)
     {
         int mid = l + r >> 1;
-        if (check(mid)) r = mid;    // check()判断mid是否满足性质
+        if (check(mid)) r = mid;    // check()判断mid是否满足绿色性质
         else l = mid + 1;
     }
     return l;
@@ -123,14 +132,14 @@ int bsearch_2(int l, int r)
     while (l < r)
     {
         int mid = l + r + 1 >> 1;
-        if (check(mid)) l = mid;
+        if (check(mid)) l = mid;//判断mid是否满足红色性质
         else r = mid - 1;
     }
     return l;
 }
 ```
 
-## 浮点数二分
+### 浮点数二分
 
 注：判断是否满足绿色性质
 
@@ -150,14 +159,347 @@ double bsearch_3(double l, double r)
 }
 ```
 
-# 高精度
+## 高精度
 
-## 大整数存法
+### 大整数存法
 
-一般从个位开始存，即a[0]为个位数字
+一般从个位开始存，即a[0]为个位数字，最高位在最后
 
 ```c++
+#include <iostream>
+#include <vector>
+using namespace std;
+int main(){
+    string a,b;
+    vector<int> A,B;
+    cin >> a >> b;//a="123456"
+    for(int i = a.size()-1;i>=0;i--)
+        A.push_back(a[i]-'0');//由于字符串里面是字符，需要转化为数字，将a从后往前存入A,A={6,5,4,3,2,1}
+    for(int i  =b.size()-1;i>=0;i--)
+        B.push_back(b[i]-'0');//由于字符串里面是字符，需要转化为数字，将b从后往前存入B
+    for(int i = A.size()-1;i>=0;i--)
+        printf("%d",A[i]);
+    //输出
+}
+```
 
+### 高精度加法
+
+A、B位数都是10^6
+
+```c++
+// C = A + B, A >= 0, B >= 0
+vector<int> add(vector<int> &A, vector<int> &B)
+{
+    if (A.size() < B.size()) return add(B, A);
+
+    vector<int> C;
+    int t = 0;
+    for (int i = 0; i < A.size(); i ++ )
+    {
+        t += A[i];
+        if (i < B.size()) t += B[i];
+        C.push_back(t % 10);
+        t /= 10;
+    }
+
+    if (t) C.push_back(t);
+    return C;
+}
+
+```
+
+### 高精度减法
+
+A、B位数都是10^6
+
+```c++
+// C = A - B, 满足A >= B, A >= 0, B >= 0
+//如果B>A输出-（B-A)
+bool cmp(vector<int> &A,vector<int> &B)
+{
+    if(A.size()!B.size()) return A.size()>B.size();
+    for(int i = A.size()-1;i>=0;i--)
+        	if(A[i]!=B[i])
+                	return A[i]>B[i];
+    return true;
+}//判断A是否>=B
+
+vector<int> sub(vector<int> &A, vector<int> &B)
+{
+    vector<int> C;
+    for (int i = 0, t = 0; i < A.size(); i ++ )
+    {
+        t = A[i] - t;
+        if (i < B.size()) t -= B[i];
+        C.push_back((t + 10) % 10);
+        if (t < 0) t = 1;
+        else t = 0;
+    }
+
+    while (C.size() > 1 && C.back() == 0) C.pop_back();
+    return C;
+}
+
+```
+
+### 高精度乘法
+
+一般为大整数x小整数，大整数的位数一般是小于10^6，小整数的数值一般小于10^9
+
+```c++
+//读入存储
+string a;
+int b;
+cin >> a >> b;
+vector<int> A ;
+for(int i = a.size()-1;i>=0;i++)
+    A.push_back(a[i]-'0');
+```
+
+高精度*低精度
+
+```c++
+// C = A * b, A >= 0, b >= 0
+vector<int> mul(vector<int> &A, int b)
+{
+    vector<int> C;
+
+    int t = 0;//进位
+    for (int i = 0; i < A.size() || t; i ++ )
+    {
+        if (i < A.size()) t += A[i] * b;
+        C.push_back(t % 10);//当前位
+        t /= 10;//进位
+    }
+
+    while (C.size() > 1 && C.back() == 0) C.pop_back();
+
+    return C;
+}
+```
+
+### 高精度除法
+
+高精度/低精度
+
+```c++
+//读入存储
+string a;
+int b;
+cin >> a >> b;
+vector<int> A ;
+for(int i = a.size()-1;i>=0;i++)
+    A.push_back(a[i]-'0');
+//输出
+for(int i = C.size();i>=0;i--)
+    printf("%d",C[i]);
+```
+
+```c++
+// A / b = C ... r, A >= 0, b > 0,商是c，余数是r
+vector<int> div(vector<int> &A, int b, int &r)
+{
+    vector<int> C;//商
+    r = 0;//余数
+    for (int i = A.size() - 1; i >= 0; i -- )
+    {
+        r = r * 10 + A[i];
+        C.push_back(r / b);
+        r %= b;
+    }
+    reverse(C.begin(), C.end());//翻转之前C[0]存的是最高位，C[size()-1]存的是最低位，其他是C[0]存的最低位，C[size()-1]存的是最高位，因此需要翻转
+    while (C.size() > 1 && C.back() == 0) C.pop_back();
+    return C;
+}
+```
+
+## 前缀和与差分
+
+数组a1,a2,a3,a4....an
+
+### 前缀和
+
+前缀和数组Si=a1+a2+....+ai 下标一定从1开始
+
+* Si求法 
+
+  * for(i = 1;i<=n;i++) s[i]=s[i-1]+a[i];S0=0
+
+* 前缀和的作用 
+
+  * 能快速求出来原数组里一段数的和
+
+    例如计算[l,r]这段的距离，如果没有前缀和数组，时间复杂度为O(n)，如果有前缀和，时间复杂度为O(1)
+
+    [l,r]=s[r]-s[l-1];
+
+#### 一维前缀和
+
+```c++
+S[i] = a[1] + a[2] + ... a[i]
+a[l] + ... + a[r] = S[r] - S[l - 1]
+```
+
+#### 二维前缀和
+
+![](/img/112605.png)
+
+```c++
+S[i, j] = 第i行j列格子左上部分所有元素的和
+以(x1, y1)为左上角，(x2, y2)为右下角的子矩阵的和为：
+S[x2, y2] - S[x1 - 1, y2] - S[x2, y1 - 1] + S[x1 - 1, y1 - 1]
+```
+
+```c++
+#include <iostream>
+const int N= 1010;
+int n,m,q;
+int a[N][N],s[N][N];
+int main(){
+  scanf("%d%d%d",&n,&m,&q);
+    for(int i = 1;i<=n;i++)
+        	for(int j = 1;j<=m;j++)
+                scanf("%d",&a[i][j]);
+    for(itn i  =1;i<=n;i++)
+        for(int j = 1;j<=m;j++)
+            s[i][j]=s[i-1][j]+s[i][j-1]-s[i-1][j-1]+a[i][j];//求前缀和
+    while(q--){
+        int x1,y1,x2,y2;
+        scanf("%d%d%d%d",&x1&y1&x2&y2);
+        printf("%d\b",s[x2][y2]-s[x1-1][y2]-s[x2][y1-1]+s[x1-1]s[y1-1]);//算以(x1,y1)为左上角,(x2,y2)为右下角的子矩阵的和
+    }
+}
+```
+
+### 差分
+
+* a1,a2,a3...an
+
+* 构造b1,b2,b3...bn
+
+* 使得 ai=b1+b2+....bi;
+  
+* 即Sbi=ai；
+  
+* 即b1=a1;
+
+  ​    b2=a2-a1;
+
+  ​    b3=a3-a2;
+
+   ......
+
+  ​    bn=an-an-1;
+
+* a是b的前缀和，b是a的差分
+* 作用：
+  * 对b数组求一遍前缀和即可求得原数组，时间复杂度为O(n) 
+  * 如果想要原数组的每一个数都加上一个值，通过差分和前缀和的时间复杂度为O(1)
+    * Bl+c，后面的Al-An全部都会加上C ，如果想要只发生在l-r，则Br+1 - C
+
+#### 一维差分
+
+```c++
+给区间[l, r]中的每个数加上c：B[l] += c, B[r + 1] -= c
+```
+
+#### 二维差分
+
+![](/img/175628.jpg)
+
+```c++
+给以(x1, y1)为左上角，(x2, y2)为右下角的子矩阵中的所有元素加上c：
+S[x1, y1] += c, S[x2 + 1, y1] -= c, S[x1, y2 + 1] -= c, S[x2 + 1, y2 + 1] += c
+```
+
+```c++
+#include <iostream>
+using namespace std;
+const int N =1010;
+int n,m,q;
+int a[N][N],b[N][N];
+void insert(int x1,int y1,int x2,int y2,int c){
+    b[x1][y1]+=c;
+    b[x2+1][y1]-=c;
+    b[x1][y2+1]-=c;
+    b[x2+1][y2+1]+=c;
+}
+int main(){
+    scanf("%d%d%d",&n,&m,&q);
+    for(int i = 1;i<=n;i++)
+        for(int j=1;j<=m;j++)
+            scanf("%d",&a[i][j]);//读入二维数组
+    for(int i = 1;i<=n;i++)
+        for(int j = 1; j<=m;j++)
+            insert(i,j,i,j,a[i][j]);//插入前缀和，构造差分数组
+    while(q--)
+    {
+        int x1,y1,x2,y2,c;
+        cin >> x1>>y1>>x2>>y2>>c;
+        insert(x1,y1,x2,y2,c);   //插入操作,在差分数组的特定位置进行操作
+    }
+    for(int i=1;i<=n;i++)
+        for(int j=1;j<=m;j++)
+            b[i][j]+=b[i-1][j]+b[i][j-1]-b[i-1][j-1];
+    for(int i = 1;i<=n;i++)
+    {
+        for(int j = 1;j<=m;j++) printf("%d ",b[i][j]);
+        puts("");
+    }
+    return 0;
+    
+}
+```
+
+## 双指针算法
+
+* 两个序列，一个指针指向第一个序列，另一个指针指向第二个序列
+* 一个序列，一个指针指向开头，一个指针指向结尾
+* 所有的双指针算法时间复杂度都是O(n)
+
+```c++
+for (int i = 0, j = 0; i < n; i ++ )
+{
+    while (j < i && check(i, j)) j ++ ;
+
+    // 以下是具体问题的逻辑
+}
+//常见问题分类：
+//    (1) 对于一个序列，用两个指针维护一段区间
+//    (2) 对于两个序列，维护某种次序，比如归并排序中合并两个有序序列的操作
+```
+
+* 核心思想：
+
+  * for(int i = 0;i<n;i++)
+
+    ​	for(int j =0;i<n;j++)
+
+    ​		O(n^2)
+
+  ​       将上面的朴素算法优化到O(n)
+
+```c++
+//例：把每个单词分别输出出来
+#include <iostream>
+#include <cstring>
+using namespace std;
+int main(){
+    char str[1000];
+    fgets(str);
+    int n = strlen(str);
+    for(int i = 0;str[i];i++){
+        int j = i;
+        while(j<n&&str[j]!=' ')j++;
+      
+        //以下这道题的具体逻辑
+        for(int k  = i;k<j;k++)
+            cout<<str[k];
+        cout<<endl;
+        i=j;
+    }
+}
 ```
 
 
@@ -170,46 +512,82 @@ double bsearch_3(double l, double r)
 
 
 
-## 高精度加法
-
-A、B位数都是10^6
-
-## 高精度减法
-
-A、B位数都是10^6
-
-## 高精度乘法
-
-一般为大整数x小整数，大整数的位数一般是小于10^6，小整数的数值一般小于10^9
-
-## 高精度除法
 
 
+## 位运算
 
+## 离散化
 
+## 区间合并
 
+# 数据结构
 
+## 链表与邻接表：树与图的存储
 
+## 栈与队列：单调队列、单调栈
 
+## kmp
 
+## Trie
 
+## 并查集
 
+## 堆
 
+## Hash表
 
+# 搜索与图论
 
+## DFS与BFS
 
+## 树与图的遍历：拓扑排序
 
+## 最短路
 
-# 前缀和与差分
+## 最小生成树
 
-# 双指针算法
+## 二分图：染色法、匈牙利算法
 
-# 位运算
+# 数学知识
 
-# 离散化
+## 质数
 
-# 区间合并
+## 约数
 
-# 链表与邻接表：树与图的存储
+## 欧拉函数
 
-# 
+## 快速幂
+
+## 扩展欧几里得算法
+
+## 中国剩余定理
+
+## 高斯消元
+
+## 组合技术
+
+## 容斥原理
+
+## 简单博弈论
+
+# 动态规划
+
+## 背包问题
+
+## 线性DP
+
+## 区间DP
+
+## 计数类DP
+
+## 数位统计DP
+
+## 状态压缩DP
+
+## 树形DP
+
+## 记忆化搜索
+
+# 贪心
+
+# 时空复杂度分析
