--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -4,6 +4,8 @@ date: 2024-03-11 23:14:01
 tags: 408日常
 sticky: 99
 categories: 算法
+banner_img: /img/1920x1080 (3).jpg
+index_img: /img/1920x1080 (3).jpg
 ---
 
  
@@ -87,3 +89,4 @@ https://www.acwing.com/problem/content/825/
 ## 删除列表中的重复节点
 
 [29. 删除链表中重复的节点 - AcWing题库](https://www.acwing.com/problem/content/27/)
+
