--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -1114,6 +1114,27 @@ a.reset(3);//把a[3]赋值为0
 
 ### pair
 
+`pair` 定义在头文件 utility 中，一个`pair`保存两个数据成员 ， 分别命名为 first 、second ，成对出现的数据，可以利用对组来返回这两个数据。与其他标准库类型不同，`pair`数据成员是 public 的。
+
+
+
+pair的基本操作
+标准库定义的pair操作如下：
+
+* pair<T1, T2> p：创建一个空的pair对象
+
+* pair<T1, T2> p(v1, v2)：用v1、v2来初始化pair对象
+
+* pair<T1, T2> p={v1, v2}：用v1、v2来初始化pair对象
+
+* make_pair(v1, v2)：返回一个由v1、v2初始化pair组，其类型根据v1、v2的值来进行推测
+
+* p.first：返回p的第一个元素
+
+* p.second：返回p的第二个元素
+
+* p1==p2：当两个对象的first和second成员都相等时，两个pair对象才相等。
+
 ```c++
 pair<int,string> a;//定义
 a={3,"kugeln"};//赋值
@@ -1165,7 +1186,7 @@ reverse(a,a+5);//左闭右开翻转数组
 
 ```c++
 //unique 去重
-//返回去重（只去掉相邻的相同元素）之后的尾迭代器（或指针），仍然为前闭后开，即这个迭代器是去重之后末尾元素的下一个位置。该函数常用于离散化，利用迭代器（或指针）的减法，可计算出去重后的元素个数。
+//返回去重（只去掉相邻的相同元素）之后的尾迭代器（或指针），仍然为前闭后开，即这个迭代器是去重之后末尾元素的下一个位置。该函数常用于离散化，利用迭代器（或指针）的减法，可计算出去重后的元素个数。 重复的元素会被放到容器末端
 #include <algorithm>
 int a[]={1,1,2,2,3,3,4};
 int m = unique(a,a+7)-a;
