--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -480,6 +480,8 @@ for (int i = 0, j = 0; i < n; i ++ )
 
   ​       将上面的朴素算法优化到O(n)
 
+* 一般先思考暴力做法，然后看i和j之间有没有单调关系，利用单调关系改变时间复杂度
+
 ```c++
 //例：把每个单词分别输出出来
 #include <iostream>
@@ -502,31 +504,451 @@ int main(){
 }
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
 ## 位运算
+
+* 求n的二进制表示中第k位数字是几，个位是第0位，从右往左算
+  * 先把第k位移到最后一位
+    * n>>k;
+  * 看一下个位是几
+    * x&1;
+
+```c++
+n>>k&1
+```
+
+lowbit(x):返回x的最后一位1
+
+```c++
+例：
+int lowbit(int x){
+    return x&-x;
+}
+x=1010;
+lowbit(x)=10;
+```
+
+* 原码 1010
+* 反码 取反
+* 补码 取反加一（计算机里的负数用补码来表示）
 
 ## 离散化
 
+值域大，个数少
+
+![](/img/221414.jpg)
+
+问题：
+
+* a中可能有重复元素，需要去重
+* 如何算出ai离散化后的值
+  * 二分
+* 保序离散化，小的在前面大的在后面
+
+```c++
+vector<int> alls; // 存储所有待离散化的值
+sort(alls.begin(), alls.end()); // 将所有值排序
+alls.erase(unique(alls.begin(), alls.end()), alls.end());   // 去掉重复元素
+
+// 二分求出x对应的离散化的值
+int find(int x) // 找到第一个大于等于x的位置
+{
+    int l = 0, r = alls.size() - 1;
+    while (l < r)
+    {
+        int mid = l + r >> 1;
+        if (alls[mid] >= x) r = mid;
+        else l = mid + 1;
+    }
+    return r + 1; // 映射到1, 2, ...n  不加1从0开始映射
+}
+```
+
+```c++
+//例题：区间和
+#include <iostream>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+typedef pair<int, int> PII;
+
+const int N = 300010;
+
+int n, m;
+int a[N], s[N];
+
+vector<int> alls;
+vector<PII> add, query;
+
+int find(int x)
+{
+    int l = 0, r = alls.size() - 1;
+    while (l < r)
+    {
+        int mid = l + r >> 1;
+        if (alls[mid] >= x) r = mid;
+        else l = mid + 1;
+    }
+    return r + 1;
+}
+
+int main()
+{
+    cin >> n >> m;
+    for (int i = 0; i < n; i ++ )
+    {
+        int x, c;
+        cin >> x >> c;
+        add.push_back({x, c});
+
+        alls.push_back(x);
+    }
+
+    for (int i = 0; i < m; i ++ )
+    {
+        int l, r;
+        cin >> l >> r;
+        query.push_back({l, r});
+
+        alls.push_back(l);
+        alls.push_back(r);
+    }
+
+    // 去重
+    sort(alls.begin(), alls.end());
+    alls.erase(unique(alls.begin(), alls.end()), alls.end());
+
+    // 处理插入
+    for (auto item : add)
+    {
+        int x = find(item.first);
+        a[x] += item.second;
+    }
+
+    // 预处理前缀和
+    for (int i = 1; i <= alls.size(); i ++ ) s[i] = s[i - 1] + a[i];
+
+    // 处理询问
+    for (auto item : query)
+    {
+        int l = find(item.first), r = find(item.second);
+        cout << s[r] - s[l - 1] << endl;
+    }
+
+    return 0;
+}
+```
+
+
+
 ## 区间合并
+
+* 按区间左端点排序
+* 扫描整个区间，把所有可能有交集的区间合并
+
+![](/img/000107.jpg)
+
+```c++
+// 将所有存在交集的区间合并
+void merge(vector<PII> &segs)
+{
+    vector<PII> res;
+
+    sort(segs.begin(), segs.end());
+
+    int st = -2e9, ed = -2e9;
+    for (auto seg : segs)
+        if (ed < seg.first)
+        {
+            if (st != -2e9) res.push_back({st, ed});
+            st = seg.first, ed = seg.second;
+        }
+        else ed = max(ed, seg.second);
+
+    if (st != -2e9) res.push_back({st, ed});
+
+    segs = res;
+}
+```
 
 # 数据结构
 
 ## 链表与邻接表：树与图的存储
 
+### 单链表（数组模拟）(静态链表)
+
+常用邻接表，存储树和图
+
+![](/img/002710.jpg)
+
+```c++
+// head存储链表头，e[]存储节点的值，ne[]存储节点的next指针，idx表示当前用到了哪个节点
+int head, e[N], ne[N], idx;//e为节点的值，ne为指向的地址
+//因为是从0开始的，所以第k的插入点的下标是k-1
+// 初始化
+void init()
+{
+    head = -1;
+    idx = 0;
+}
+
+// 在链表头插入一个数a，即头插法
+void insert(int a)
+{
+    e[idx] = a, ne[idx] = head, head = idx ++ ;//idx即新插入的点的下标
+}
+
+//将x插入到下标是k的点的后面
+void add(int k ,int x)
+{
+    e[idx] = x;
+    ne[idx]=ne[k];
+    ne[k]=idx++;
+    
+}
+
+//将下标是k的点后面的点删掉
+void remove(int k){
+    ne[k]=ne[ne[k]];
+}
+
+
+// 将头结点删除，需要保证头结点存在
+void remove()
+{
+    head = ne[head];
+}
+
+//遍历单链表
+for(int i = head;i!=-1;i=ne[i])
+    	cout<<e[i]<<endl; 
+```
+
+struct版在408（1），struct创建新链表比较慢
+
+### 双链表（数组模拟）（静态链表）
+
+常用于优化某些问题
+
+双链表即一个节点指向左右
+
+初始化
+
+![](/img/015832.jpg)
+
+右插
+
+
+
+```c++
+// e[]表示节点的值，l[]表示节点的左指针，r[]表示节点的右指针，idx表示当前用到了哪个节点
+int e[N], l[N], r[N], idx;
+
+// 初始化
+void init()
+{
+    //0是左端点，1是右端点，即0是头结点，1是尾结点
+    r[0] = 1, l[1] = 0;
+    idx = 2;
+}
+
+// 在节点a的右边插入一个数x
+void insert(int a, int x)
+{
+    e[idx] = x;
+    l[idx] = a, r[idx] = r[a];
+    l[r[a]] = idx, r[a] = idx ++ ;
+}
+
+// 删除节点a
+void remove(int a)
+{
+    l[r[a]] = l[a];
+    r[l[a]] = r[a];
+}
+```
+
 ## 栈与队列：单调队列、单调栈
 
+### 栈（先进先出）
+
+```c++
+// tt表示栈顶
+int stk[N], tt = 0;//stk表示栈，tt表示栈顶下标
+
+// 向栈顶插入一个数
+stk[ ++ tt] = x;
+
+// 从栈顶弹出一个数
+tt -- ;
+
+// 栈顶的值
+stk[tt];
+
+// 判断栈是否为空，如果 tt > 0，则表示不为空
+if (tt > 0) not empty;
+else empty;
+
+//栈顶
+stk[tt];
+```
+
+#### 单调栈
+
+* 单调栈和单调队列都是用栈和队列暴力模拟问题，即找出朴素算法，再看一下没用的元素，删掉元素看是否有单调性，有单调性可以用单调队列或者单调栈优化问题，取极值直接找两个端点，找一个点可以用二分
+
+```c++
+//常见模型：找出每个数左边离它最近的比它大/小的数
+int tt = 0;
+for (int i = 1; i <= n; i ++ )
+{
+    while (tt && check(stk[tt], i)) tt -- ;//当栈不为空且当前元素符合某种性质，不会用到当前元素
+    stk[ ++ tt] = i;
+}//时间复杂度为O(n)
+```
+
+### 队列（先进先出）
+
+#### 普通队列
+
+```c++
+// hh 表示队头，tt表示队尾
+int q[N], hh = 0, tt = -1;
+
+// 向队尾插入一个数
+q[ ++ tt] = x;
+
+// 从队头弹出一个数
+hh ++ ;
+
+// 队头的值
+q[hh];
+
+//取出队尾
+q[tt];
+
+// 判断队列是否为空，如果 hh <= tt，则表示不为空
+if (hh <= tt) not empty;
+    else empty;
+
+```
+
+#### 循环队列
+
+```c++
+// hh 表示队头，tt表示队尾的后一个位置
+int q[N], hh = 0, tt = 0;
+
+// 向队尾插入一个数
+q[tt ++ ] = x;
+if (tt == N) tt = 0;
+
+// 从队头弹出一个数
+hh ++ ;
+if (hh == N) hh = 0;
+
+// 队头的值
+q[hh];
+
+// 判断队列是否为空，如果hh != tt，则表示不为空
+if (hh != tt)
+{
+
+}
+
+```
+
+#### 单调队列
+
+* 队列里面存的是下标
+
+```c++
+//常见模型：找出滑动窗口中的最大值/最小值
+int hh = 0, tt = -1;
+for (int i = 0; i < n; i ++ )
+{
+    while (hh <= tt && check_out(q[hh])) hh ++ ;  // 判断队头是否滑出窗口
+    while (hh <= tt && check(q[tt], i)) tt -- ;
+    q[ ++ tt] = i;//插入值
+}
+```
+
 ## kmp
+
+思路：
+
+* 暴力算法怎么做
+
+  * s[N],p[M];
+
+    for(int i = 1;i<=n;i++){
+
+    bool flag = true;
+
+    ​	for(int j = 1;j<=m;j++)
+
+    if(s[i]!=p[j]){
+
+    flag = false;
+
+    break;}
+
+    }
+
+* 如何去优化
+
+![](/img/20240324234854.jpg)
+
+存在五个相等的轴，其中：
+
+* 由于第一段第二段在i-j都相等，所以P①=S①，P②=S②
+* 由于J+1匹配失败，P字串向后移动直到再次匹配，此时P③=S②，由于S②=P②，所以P②=P③
+* 由于P实际上为字串位移，所以P③=P①
+* 综上，存在五段相等的轴
+* 因此，只需要求子串P中，P①=P②的最大区域，当该区域越大， P再次匹配往后移动的距离越短
+
+因此，对于字串P：
+
+* 需要预处理出以某个点为终点的后缀与前缀相等，相等的长度最大为多少
+
+  ![](/img/20240325000048.jpg)
+
+  ```c++
+  Next[i]=j//即从i开始的后缀与从1开始的前缀相等，而且后缀的长度最长
+  ```
+
+  
+
+```c++
+// s[]是长文本，p[]是模式串，n是s的长度，m是p的长度 s[]要匹配的长串，p[]比较短的模板串
+求模式串的Next数组：
+for (int i = 2, j = 0; i <= m; i ++ )
+{
+    while (j && p[i] != p[j + 1]) j = ne[j];
+    if (p[i] == p[j + 1]) j ++ ;
+    ne[i] = j;
+}
+
+// 匹配
+for (int i = 1, j = 0; i <= n; i ++ )
+{
+    while (j && s[i] != p[j + 1]) j = ne[j];
+    if (s[i] == p[j + 1]) j ++ ;
+    if (j == m)
+    {
+        j = ne[j];
+        // 匹配成功后的逻辑
+    }
+}
+```
+
+```
+//完整
+
+```
+
+
 
 ## Trie
 
