--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -930,7 +930,7 @@ for (int i = 2, j = 0; i <= m; i ++ )
     ne[i] = j;
 }
 
-// 匹配
+// 匹配O(n)
 for (int i = 1, j = 0; i <= n; i ++ )
 {
     while (j && s[i] != p[j + 1]) j = ne[j];
@@ -943,14 +943,103 @@ for (int i = 1, j = 0; i <= n; i ++ )
 }
 ```
 
-```
+```c++
 //完整
+#include<iostream>
+using namespace std;
+const int N =10010,M=100010;
+int n ,m;
+char p[N],s[M];
+int ne[N];
 
+int main(){
+	
+	ios::sync_with_stdio(0);
+	cin.tie(0);
+	cin >> n>>p+1>>m>>s+1;
+	//求next数组的过程
+	for(int i = 1,j=0;j<=m;i++){
+		while(j&&p[i]!=p[j+1]) j = ne[j];
+		if(p[i]==p[j+1])j++;
+		ne[i] = j;
+	}
+	
+	
+	 
+	//kmp匹配过程
+	for(int i = 1,j=0;i<=m;i++) //i枚举Si ，j和Si匹配的是P(j+1) ,总往前错一位 
+	{
+		while(j&&s[i]!=p[j+1])//j没有退回起点，退回起点意味着要重新开始匹配 ;不等意味着那个位置不匹配了 
+	    	j = ne[j];//ne[j]是当前j点的最长后缀的长度，j是不匹配后往后移动更新的检验分界点。由于j从0开始，所以当j等于上一个j的ne长度时，相当于j被更新到图示位置 
+	    if(s[i]==p[j+1]) j++;//下一个字符终于匹配，继续检验下一个位置的字符是否匹配 
+		if(j==n) {
+			//匹配成功 
+			cout<<i-n;
+			j=ne[j];
+		}
+	}
+	
+	
+} 
 ```
 
+kmp匹配过程
 
+![](/img/001529.jpg)
+
+求next数组的过程
+
+![](/img/004944.jpg)
+
+完整过程
+
+![](/img/010536.jpg)
 
 ## Trie
+
+支持两个操作：
+
+* 高效地存储和查找字符串集合的数据结构
+  * 字符类型和个数不会很多，要么都是大写要么都是小写要么都是数字
+* trie树的存储
+
+![](/img/091204.jpg)
+
+```c++
+int son[N][26], cnt[N], idx;
+// 0号点既是根节点，又是空节点
+// son[][]存储树中每个节点的子节点
+// cnt[]存储以每个节点结尾的单词数量
+//idx存储当前用到了哪个下标，下标是0的点，既是根节点又是空节点
+
+// 插入一个字符串
+void insert(char *str)
+{
+    int p = 0;
+    for (int i = 0; str[i]; i ++ )
+    {
+        int u = str[i] - 'a';//a-z映射成0-25
+        if (!son[p][u]) son[p][u] = ++ idx;//不存在对应字母就创建出来
+        p = son[p][u];//继续往下走
+    }
+    cnt[p] ++ ;//以这个点为结尾的单词数量多了一个
+}
+
+// 查询字符串出现的次数
+int query(char *str)
+{
+    int p = 0;
+    for (int i = 0; str[i]; i ++ )
+    {
+        int u = str[i] - 'a';//找到当前字母对应的子节点的编号
+        if (!son[p][u]) return 0;//查找发现不存在
+        p = son[p][u];//继续往下走
+    }
+    return cnt[p];//返回以p结尾的单词数量
+}
+```
+
+
 
 ## 并查集
 
