--- a/source/_posts/备战408（2）.md
+++ b/source/_posts/备战408（2）.md
@@ -1039,13 +1039,369 @@ int query(char *str)
 }
 ```
 
-
-
 ## 并查集
+
+* 快速处理
+
+  * 将两个集合合并
+
+  * 询问两个元素是否在一个集合当中
+
+  * 近乎O(1)
+
+  * 用树的形式维护所有集合，根节点的编号就是集合的编号，每个节点都存储一个父节点p[x]，当要查找元素属于哪个集合，只要找到根节点的编号即可。
+
+    * 如何判断是否是树根：if(p[x]==x)
+
+    * 如何求x的集合编号:while(p[x]!=x)x=p[x];//只要不是树根就一直往上走，直到走到树根为止
+
+      * 优化：路径压缩
+
+        ![](/img/111249.jpg)
+
+    * 如何合并两个集合
+
+      px是x的集合编号,py是y的集合编号。p[x]=y;
+
+      ![](/img/110436.jpg)
+
+* 读入操作
+
+  char op[2];
+
+  scanf("%s",op) 用字符串不会读入空格和回车
+
+```c++
+(1)朴素并查集：
+
+    int p[N]; //存储每个点的祖宗节点
+
+    // 返回x的祖宗节点，即所在集合的编号，顺便加上路径优化
+    int find(int x)
+    {
+        if (p[x] != x) p[x] = find(p[x]);//当不是祖宗节点的时候，寻找父节点的父节点，递归之后找到祖宗节点并将路径优化
+        return p[x];//返回祖宗节点
+    }
+
+    // 初始化，假定节点编号是1~n
+    for (int i = 1; i <= n; i ++ ) p[i] = i;
+
+    // 合并a和b所在的两个集合：
+    p[find(a)] = find(b);//让a的祖宗节点的父节点等于b的祖宗节点，即将a插入b中
+
+    //判断a和b是不是在同一个集合中
+      if(find(a)==find(b)) puts("yes");
+		else puts("no"); 
+
+(2)维护size的并查集：
+
+    int p[N], size[N];
+    //p[]存储每个点的祖宗节点, size[]只有祖宗节点的有意义，表示祖宗节点所在集合中的点的数量，只保证根节点的size有意义
+
+    // 返回x的祖宗节点
+    int find(int x)
+    {
+        if (p[x] != x) p[x] = find(p[x]);
+        return p[x];
+    }
+
+    // 初始化，假定节点编号是1~n
+    for (int i = 1; i <= n; i ++ )
+    {
+        p[i] = i;
+        size[i] = 1;
+    }
+
+    // 合并a和b所在的两个集合：
+      if(find(a)==find(b))continue;//a和b在一个集合当中
+    size[find(b)] += size[find(a)];//把a集合中点的个数加到b集合中
+    p[find(a)] = find(b);//将a插入b
+    //找到某点所在的集合的点的个数
+      cout<<size[find(a)];
+
+(3)维护到祖宗节点距离的并查集：
+
+    int p[N], d[N];
+    //p[]存储每个点的祖宗节点, d[x]存储x到p[x]的距离
+
+    // 返回x的祖宗节点
+    int find(int x)
+    {
+        if (p[x] != x)
+        {
+            int u = find(p[x]);
+            d[x] += d[p[x]];
+            p[x] = u;
+        }
+        return p[x];
+    }
+
+    // 初始化，假定节点编号是1~n
+    for (int i = 1; i <= n; i ++ )
+    {
+        p[i] = i;
+        d[i] = 0;
+    }
+
+    // 合并a和b所在的两个集合：
+    p[find(a)] = find(b);
+    d[find(a)] = distance; // 根据具体问题，初始化find(a)的偏移量
+
+```
 
 ## 堆
 
+* 功能
+  * 插入一个数
+  * 求集合当中的最小值
+  * 删除最小值
+  * 删除任意一个元素
+  * 修改任意一个元素
+
+* 堆是一颗完全二叉树，除了最后一层节点外，上面的节点都是满的，最后一层从左到右排列
+
+建堆：
+
+![](/img/204742.jpg)
+
+```c++
+//小根堆：每一个点小于等于左右子节点，根节点是整个数据结构中的最小值，用一维数组来存，stl里的堆是优先队列
+```
+
+![](/img/190742.jpg)
+
+建堆时间复杂度解释
+
+```c++
+// h[N]存储堆中的值, h[1]是堆顶，x的左子节点是2x, 右子节点是2x + 1
+// ph[k]存储第k个插入的点在堆中的位置
+// hp[k]存储堆中下标是k的点是第几个插入的
+int h[N], ph[N], hp[N], size;
+
+// 交换两个点，及其映射关系
+void heap_swap(int a, int b)
+{
+    swap(ph[hp[a]],ph[hp[b]]);
+    swap(hp[a], hp[b]);
+    swap(h[a], h[b]);
+}
+
+void down(int u)//往下调整，时间复杂度O(logn)
+{
+    int t = u;//t代表三个数中最小值的点坐标
+    if (u * 2 <= size && h[u * 2] < h[t]) //判断是否存在左节点，判断左节点是否小于该节点
+        t = u * 2;//当左节点小于该节点，将t变成左节点
+    if (u * 2 + 1 <= size && h[u * 2 + 1] < h[t])//判断右节点是否存在；判断右节点是否小于目前的最小点（如果上面成立，最小点已经更新为左节点） 
+        t = u * 2 + 1;
+    if (u != t)//说明根节点不是最小值，需要进行交换
+    {
+        heap_swap(u, t);//将t（保存的最小值的坐标）变成根节点，将t变成原根节点。
+        down(t);//将原根节点往下沉进行递归处理直到合适的位置
+    }
+}
+
+void up(int u)//往上调整，每次往上走只需要跟父节点比较，时间复杂度O(logn)
+{
+    while (u / 2 && h[u] < h[u / 2])
+    {
+        heap_swap(u, u / 2);
+        u >>= 1;
+    }
+}
+
+// O(n)建堆
+for (int i = n / 2; i; i -- ) down(i);//由于从下往上递归，在down的时候可以保证每个根节点的左右节点都是完好无损的
+
+//插入一个数
+heap[++size]=x;up(size);
+
+//求当前队列的最小值
+heap[1];
+
+//删除一个最小值，即删掉堆顶元素:用整个堆的最后一个元素覆盖掉 ，因为是用数组的形式进行存储，删除数组前面的数比较困难，删除最后一个数比较简单 
+heap[1]=heap[size];//用最后一个元素覆盖掉堆顶元素
+size--;//删除最后一个元素
+down(1);//重新排序堆
+
+//删除任意一个元素
+heap[k]=heap[size];//用最后一个元素覆盖掉要删除的元素
+size--;//删除最后一个元素
+down(k);up(k);//只会执行一个
+
+//修改一个元素
+heap[k]=x;
+down(k);up(k);
+```
+
+
+
+
+
 ## Hash表
+
+```c++
+核心思想：将字符串看成P进制数，P的经验值是131或13331，取这两个值的冲突概率低
+小技巧：取模的数用2^64，这样直接用unsigned long long存储，溢出的结果就是取模的结果
+
+typedef unsigned long long ULL;
+ULL h[N], p[N]; // h[k]存储字符串前k个字母的哈希值, p[k]存储 P^k mod 2^64
+
+// 初始化
+p[0] = 1;
+for (int i = 1; i <= n; i ++ )
+{
+    h[i] = h[i - 1] * P + str[i];
+    p[i] = p[i - 1] * P;
+}
+
+// 计算子串 str[l ~ r] 的哈希值
+ULL get(int l, int r)
+{
+    return h[r] - h[l - 1] * p[r - l + 1];
+}
+```
+
+## STL简介
+
+详情看备战408（1）
+
+### vector
+
+```c++
+vector, 变长数组，倍增的思想
+    size()  返回元素个数
+    empty()  返回是否为空
+    clear()  清空
+    front()/back()
+    push_back()/pop_back()
+    begin()/end()
+    []
+    支持比较运算，按字典序
+```
+
+### pair
+
+```c++
+pair<int, int>
+    first, 第一个元素
+    second, 第二个元素
+    支持比较运算，以first为第一关键字，以second为第二关键字（字典序）
+```
+
+### string
+
+```c++
+string，字符串
+    size()/length()  返回字符串长度
+    empty()
+    clear()
+    substr(起始下标，(子串长度))  返回子串
+    c_str()  返回字符串所在字符数组的起始地址
+```
+
+### queue
+
+```c++
+queue, 队列
+    size()
+    empty()
+    push()  向队尾插入一个元素
+    front()  返回队头元素
+    back()  返回队尾元素
+    pop()  弹出队头元素
+```
+
+### priority_queue
+
+```c++
+priority_queue, 优先队列，默认是大根堆
+    size()
+    empty()
+    push()  插入一个元素
+    top()  返回堆顶元素
+    pop()  弹出堆顶元素
+    定义成小根堆的方式：priority_queue<int, vector<int>, greater<int>> q;
+```
+
+### stack
+
+```c++
+stack, 栈
+    size()
+    empty()
+    push()  向栈顶插入一个元素
+    top()  返回栈顶元素
+    pop()  弹出栈顶元素
+
+```
+
+### deque
+
+```c++
+deque, 双端队列
+    size()
+    empty()
+    clear()
+    front()/back()
+    push_back()/pop_back()
+    push_front()/pop_front()
+    begin()/end()
+    []
+```
+
+### set,map,multiset,multimap
+
+```c++
+set, map, multiset, multimap, 基于平衡二叉树（红黑树），动态维护有序序列
+    size()
+    empty()
+    clear()
+    begin()/end()
+    ++, -- 返回前驱和后继，时间复杂度 O(logn)
+
+    set/multiset
+        insert()  插入一个数
+        find()  查找一个数
+        count()  返回某一个数的个数
+        erase()
+            (1) 输入是一个数x，删除所有x   O(k + logn)
+            (2) 输入一个迭代器，删除这个迭代器
+        lower_bound()/upper_bound()
+            lower_bound(x)  返回大于等于x的最小的数的迭代器
+            upper_bound(x)  返回大于x的最小的数的迭代器
+    map/multimap
+        insert()  插入的数是一个pair
+        erase()  输入的参数是pair或者迭代器
+        find()
+        []  注意multimap不支持此操作。 时间复杂度是 O(logn)
+        lower_bound()/upper_bound()
+
+unordered_set, unordered_map, unordered_multiset, unordered_multimap, 哈希表
+    和上面类似，增删改查的时间复杂度是 O(1)
+    不支持 lower_bound()/upper_bound()， 迭代器的++，--
+```
+
+### bitset
+
+```c++
+bitset, 圧位
+    bitset<10000> s;
+    ~, &, |, ^
+    >>, <<
+    ==, !=
+    []
+
+    count()  返回有多少个1
+
+    any()  判断是否至少有一个1
+    none()  判断是否全为0
+
+    set()  把所有位置成1
+    set(k, v)  将第k位变成v
+    reset()  把所有位变成0
+    flip()  等价于~
+    flip(k) 把第k位取反
+```
 
 # 搜索与图论
 
