--- a/source/_posts/备战408（1）.md
+++ b/source/_posts/备战408（1）.md
@@ -1,7 +1,7 @@
 ---
-title: 备战408（1）
+title: 基础语法
 date: 2024-03-11 01:13:16
-tags: 408日常	
+tags: 算法	
 sticky: 100
 categories: 算法
 banner_img: /img/1920x1080 (1).jpg
@@ -863,7 +863,7 @@ a.empty();//判断是否为空，返回布尔值
 a.clear();//删掉容器里的所有元素，时间复杂度O（n），其余大部分是O(1)，队列、优先队列和栈没有
 a.begin();//第一个迭代器的地址
 *a.begin();//相当于a[0]
-a.end();//最后一个位置的下一个位置，即便捷，越界访问
+a.end();//最后一个位置的下一个位置，即便捷，越界访问,即a[a.size()]
 //迭代器左闭右开，包含begin不包含end
 a.front();//相当于a[0],*a.begin();
 a.back();//相当于a[a.size()-1]
@@ -956,7 +956,7 @@ int main(){
         a.pop();//删除堆顶元素即最大值
     	a.top();//查询堆顶元素（最大值）*/
     
-    //清空队列，即冲重新初始化
+    //清空队列，即重新初始化
     q = queue<int> ();
 }
 ```
@@ -1078,7 +1078,7 @@ int main(){
     
     map<string,int> a;
     a["kugeln"]=2;
-    cout<<a["kugeln"]<<endl;
+    cout<<a["kugeln"]<<endl;//把kugeln映射到1
     
     map<string,vector<int>>a;
     a["kugeln"]=vector<int>();
