--- a/source/_posts/备战408（习题本）.md
+++ b/source/_posts/备战408（习题本）.md
@@ -1,5 +1,5 @@
 ---
-title: 备战408（习题本）
+title: 算法练习题
 date: 2024-03-11 23:14:01
 tags: 408日常
 sticky: 99
@@ -66,7 +66,7 @@ index_img: /img/1920x1080 (3).jpg
 
 ## 排序
 
-https://www.acwing.com/problem/content/825/
+[823. 排列 - AcWing题库](https://www.acwing.com/problem/content/825/)
 
 # 结构体、类、指针、引用
 
